# CMakeRepo

./: README.md
0_Basics/: README.md  main.cpp  out
1_Libraries_Installing_PairingWithExecutable/0_Trim/: CMakeLists.txt  README.md  main.cpp
1_Libraries_Installing_PairingWithExecutable/1_SomeLibDemo/cpp/: CMakeLists.txt  README.md  adder.cpp  adder.h
1_Libraries_Installing_PairingWithExecutable/TestSome/: CMakeLists.txt  main.cpp
